--- a/client/src/components/List/style.css
+++ b/client/src/components/List/style.css
@@ -4,6 +4,7 @@
   border-radius: 4px;
   overflow-y: scroll;
   overflow-x: hidden;
+  box-shadow: 0px 6px 11px -10px gray;
 }
 
 .list-overflow-container ul {
